--- a/less/tables.less
+++ b/less/tables.less
@@ -268,20 +268,20 @@ table {
     -ms-overflow-style: -ms-autohiding-scrollbar;
     border: 1px solid @table-border-color;
     // Tighten up spacing
-    > .table {
-      margin-bottom: 0;
-      // Ensure the content doesn't wrap
-      > tfoot,
-       > thead,
-      > tbody {
-        > tr {
-          > th,
-          > td {
-            white-space: nowrap;
-          }
-        }
-      }
-    }
+    // > .table {
+    //   margin-bottom: 0;
+    //   // Ensure the content doesn't wrap
+    //   > tfoot,
+    //    > thead,
+    //   > tbody {
+    //     > tr {
+    //       > th,
+    //       > td {
+    //         white-space: nowrap;
+    //       }
+    //     }
+    //   }
+    // }
     // Special overrides for the bordered tables
     > .table-bordered {
       border: 0;
