--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -36,7 +36,7 @@ head:first-child+body .nav {
   background-position: unset;
 }
 body.pureportal #content .person_view .view_container p {
-    margin: 8px 0 15px!important;
+    margin: 8px 0 10px!important;
     padding: 0;
 }
 
@@ -340,10 +340,21 @@ div.portal_navigator_ordering .portal_navigator_popup_content a {
   padding-right: 3px;
 }
 
-#purecontent .person_relations_list .for_publications .portal_navigator_top {
+/* #purecontent .person_relations_list .for_publications .portal_navigator_top {
   display: none !important;
+} */
+
+div.portal_navigator_top {
+  overflow: unset;
 }
 
+div.portal_navigator_top div.portal_navigator_ordering {
+  float: left;
+}
+
+.portal_navigator_window_and_pagesize {
+  clear: both;
+}
 .relations a.link {
   overflow-wrap: break-word;
   word-wrap: break-word;
