--- a/less/variables.less
+++ b/less/variables.less
@@ -33,9 +33,10 @@
 
 // KU specific colors
 @beredsskabs-banner-bg: #ffe100;
-@ku-jumpboard:          #921819;
-@ku-jumpboard-links:    @ku-light-grey;
-@ku-jumpboard-list-bg:  @semi-white;
+// @ku-jumpboard:          #921819;
+// @ku-jumpboard-links:    @ku-light-grey;
+// @ku-jumpboard-list-bg:  @semi-white;
+@ku-cookiebox-bg:       #505050;
 
 // FAK colors
 @ku-red:                #901a1e;
