--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -24,8 +24,8 @@
     .btn {
       #gradient.vertical(@gray-lighter; darken(@gray-lighter, 12%); 0%; 100%);
       color: @ku-red;
-      padding: 6px 25px!important;
-      font-size: 1.2em;
+      padding: 6px 23px!important;
+      font-size: 1.3em;
       font-weight: bold;
       text-transform: uppercase;
     }
@@ -34,6 +34,7 @@
       color: @white-color;
       text-decoration: underline;
       display: block;
+      margin-top: 16px;
 
       &:before {
         content: "\00bb";
