--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -33,15 +33,17 @@
     .laes_mere_cookies {
       color: @white-color;
       text-decoration: underline;
-      display: block;
+      display: inline-block;
       margin-top: 16px;
 
       &:before {
         content: "\00bb";
         color: inherit;
         display: inline-block;
-        font-size: 1.5em;
+        font-size: 1.4em;
         margin-right: 5px;
+        top: 1px;
+        position: relative;
       }
     }
   }
