Fixing missing arrow color

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -243,6 +243,9 @@
     right: @margin10;
     position: absolute;
     z-index: 5;
+    @media all and (max-width: @screen-xs-max) {
+      color: @white-color;
+    }
   }
   // Hide arrow
   &.no-arrow {
