Button line height

--- a/less/input-groups.less
+++ b/less/input-groups.less
@@ -166,8 +166,8 @@
     > .btn,
     > .btn-group {
       z-index: 2;
-      margin-left: -1px;
-      border-radius: 0; // KU
+      margin-left: -2px;
+      //border-radius: 0; // KU
     }
   }
 }
