--- a/less/navbar.less
+++ b/less/navbar.less
@@ -893,9 +893,9 @@
         margin-left: -2px!important;
       }
 
-      &.global-search-submit {
-        .border-right-radius(@border-radius-base)
-      }
+      // &.global-search-submit {
+      //   .border-right-radius(@border-radius-base)
+      // }
     }
 
     .dropdown-toggle {
