--- a/less/buttons.less
+++ b/less/buttons.less
@@ -19,7 +19,7 @@
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
   white-space: nowrap;
-  .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; 1.42857143; @btn-border-radius-base);
+  .button-size(@padding-base-vertical; @padding-base-horizontal; @font-size-base; @line-height-base; @btn-border-radius-base);
   @media (max-width: @screen-xs-max) {
     font-size: 14px;
   }
