--- a/less/variables.less
+++ b/less/variables.less
@@ -209,7 +209,7 @@
 @font-size-body-desktop:  13px;
 
 //** Unit-less `line-height` for use in components like buttons.
-@line-height-base:        1.5; // 18/12
+@line-height-base:        1.428571429; // 1.5;
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 @line-height-computed:    floor((@font-size-base * @line-height-base)); // ~16px
 
