Button height in FF

--- a/less/input-groups.less
+++ b/less/input-groups.less
@@ -45,11 +45,15 @@
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn {
   .input-lg();
+  // KU
+  height: @input-height-large;
 }
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
   .input-sm();
+  // KU
+  height: @input-height-small;
 }
 
 
