--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -61,5 +61,8 @@
   padding: @padding-vertical @padding-horizontal;
   font-size: @font-size;
   line-height: @line-height;
+  // KU
+  height: @input-height-base;
+  // KU end
   border-radius: @border-radius;
 }
