--- a/less/buttons.less
+++ b/less/buttons.less
@@ -5,11 +5,11 @@
 // --------------------------------------------------
 // KU:
 
-.btn:not(.btn-lg):not(.btn-sm):not(.btn-xs) {
-  // KU
-  height: @input-height-base;
-  // KU end
-}
+// .btn:not(.btn-lg):not(.btn-sm):not(.btn-xs) {
+//   // KU
+//   height: @input-height-base;
+//   // KU end
+// }
 
 .btn {
   display: inline-block;
