Flexible box fix

--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -844,7 +844,7 @@
       &.outlined {
         .header {
           background: transparent;
-          color: inherit;
+          color: inherit!important;
         }
       }
     }
