Entries with search field

--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -119,6 +119,10 @@
         }
       }
     }
+
+    &.with-form {
+      padding: 6px 25px 7px;
+    }
     @media only screen and (min-width: @screen-md) {
       &+.entry {
         &:after {
@@ -154,10 +158,6 @@
             background-color: @teol;
           }
         }
-      }
-      &.with-form {
-        padding-top: 6px;
-        padding-bottom: 7px;
       }
     }
   }
