Remove underlineing of icons in entries

--- a/less/ku-entries.less
+++ b/less/ku-entries.less
@@ -75,6 +75,9 @@
 
       &:hover {
         text-decoration: underline;
+        &::before {
+          text-decoration: none;
+        }
       }
 
       &:visited {
@@ -89,7 +92,7 @@
         left: 0;
         top: 50%;
         transform: translateZ(-50%);
-        display: inline;
+        display: inline-block;
         text-transform: none;
         color: @ku-red;
         text-decoration: none;
