Pure spacing for mobiles

--- a/docs/assets/css/doctypes/publikationsliste.css
+++ b/docs/assets/css/doctypes/publikationsliste.css
@@ -1,4 +1,10 @@
 /* Publikationslister - CURIS/Pure  */
+@media all and (max-width: 767px) {
+  #purecontent {
+    margin-top: 23px;
+  }
+}
+
 .nav {
   background: none;
   border: 0;
