--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -853,6 +853,8 @@
         .header {
           background: transparent;
           color: inherit!important;
+          border-right: 0;
+          white-space: normal;
         }
       }
     }
