--- a/less/ku-mobile-menu.less
+++ b/less/ku-mobile-menu.less
@@ -284,7 +284,7 @@
   &> .mm-panel {
     &>.mm-navbar {
       &+.mm-listview {
-        margin-top: -19px;
+        margin-top: -19px!important;
       }
     }
   }
