Docs left menu script

--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -126,17 +126,16 @@
       $('#leftmenu .nav li').removeClass('active');
       $(this).parent().addClass('active');
     });
-
     function setActiveLinks() {
       var current = location.pathname;
       $('#leftmenu:not(.exclude) li a').each(function() {
         var $this = $(this);
         $this.parent().removeClass('active');
         // if the current path is like this link, make it active
-        var $templateLink = $this.prop('href').replace('..', '/examples').indexOf(current) !== -1;
+        var $templateLink = $this.attr('href').replace('..', '/examples').indexOf(current) !== -1;
         // Get hash value
         var $hash = location.href.substr(location.href.indexOf('#') + 1);
-        if ($templateLink === true || $this.prop('href') == '#' + $hash) {
+        if ($templateLink === true || $this.attr('href') == '#' + $hash) {
           $this.parent().addClass('active');
         }
       })
