--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -22,6 +22,10 @@ header, nav, footer {
   display: none !important;
 }
 
+#pagewrapper {
+  display: block;
+}
+
 main {
   margin-left: 0;
   overflow-y: visible;
