--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -1,7 +1,7 @@
-/* @page {
-  size: A4 landscape;
-  margin: 15mm 10mm;
-} */
+@page {
+  size: A4;
+  margin: 0;
+}
 *, *:before, *:after {
   color: #000 !important;
   text-shadow: none !important;
@@ -15,7 +15,9 @@ html, body {
 }
 
 body {
-  margin: 10mm 10mm;
+  width: 210mm;
+  height: 297mm;
+  margin: 5mm auto;
 }
 
 header, nav, footer {
