--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -45,9 +45,6 @@ main {
 .local-footer  {
   border-bottom: 1px solid #727272;
 }
-.main-content {
-  width: 100%;
-}
 
 .ku-branding::after {
   z-index: 1000;
@@ -57,8 +54,11 @@ main {
 .main-content {
   margin-top: 23px;
 }
-
-/* .right-side {
+/*
+.main-content {
+  width: 100%;
+}
+ .right-side {
   width: 50%;
   float: left !important;
 } */
