--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -54,20 +54,13 @@ main {
   position: relative;
 }
 
-.main-content {
-  margin-top: 23px;
-}
-
-/*
-.main-content {
-  width: 100%;
-}
- .right-side {
-  width: 50%;
-  float: left !important;
-} */
 .main-area {
   width: 100%;
+}
+
+.main-content {
+  margin-top: 23px;
+  width: 75%;
 }
 
 .right-side {
@@ -100,6 +93,7 @@ a, a:visited {
 
 .main-area a[href]:after {
   content: " (Link: "attr(href) ")";
+  word-break: break-word;
 }
 
 .main-area abbr[title]:after {
