--- a/less/ku-gridboxes-bootstrap.less
+++ b/less/ku-gridboxes-bootstrap.less
@@ -521,6 +521,7 @@
 /*
 * Mobile: All column types must behave like single column boxes
 */
+
 .gridbox {
   .all-single-column();
 
@@ -1308,6 +1309,6 @@
   }
 
   &:focus {
-    .tab-focus();
+    .tab-focus-v2();
   }
 }
