--- a/docs/assets/css/social-feeds/twitter.css
+++ b/docs/assets/css/social-feeds/twitter.css
@@ -25,6 +25,11 @@
   margin-top: 5px;
 }
 
+#twitter-feed a:focus {
+ outline: 1px solid #106bfe;
+ outline-offset: -2px;
+}
+
 .imgInfo, .twitterInfo {
   float: left;
 }
