--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -1,4 +1,5 @@
 /* Slider */
+
 .gallery-nav,
 .slide-gallery,
 .slideshow {
@@ -168,6 +169,10 @@
       .image-fadeOut();
     }
   }
+
+  &:focus {
+    .tab-focus-v2();
+  }
 }
 
 .slick-arrow.slick-hidden {
@@ -241,6 +246,7 @@
   &:hover {
     opacity: 1;
   }
+
   .glyphicon {
     top: -1px;
     right: -1px;
@@ -335,6 +341,7 @@
 
   .slick-active {
     background: rgba(@gray-base, 0.5);
+
     &:focus-within {
       .tab-focus();
     }
@@ -456,7 +463,7 @@
         padding: 15px;
         width: 45%;
         height: 100%;
-        padding: 16px 20px 20px 20px;
+        padding: 16px 20px 20px;
       }
 
       &.textblock-right {
@@ -473,7 +480,7 @@
         transform: translateY(-50%);
         width: 45%;
         min-height: 70%;
-        padding: 16px 20px 20px 20px;
+        padding: 16px 20px 20px;
         .border-right-radius(2px);
       }
 
