--- a/less/variables.less
+++ b/less/variables.less
@@ -144,8 +144,10 @@
 // Fact box colors:
 @factbox-bg:            #e7e7e7;
 
-// KU gradients
+// Org chart:
+@ku-org-chart-line:     2px;
 
+// KU gradients
 @ku-entry-start:        #f3f3f1;
 @ku-entry-end:          #edece9;
 @ku-entry-border:       #e8e8e8;
