--- a/docs/assets/css/content-elements/org-chart.less
+++ b/docs/assets/css/content-elements/org-chart.less
@@ -1,4 +1,5 @@
-@import "../../../../less/variables.less"; // Organisational chart
+@import "../../../../less/variables.less";
+// Organisational chart
 
 ol {
   &.org-chart {
@@ -127,6 +128,7 @@ ol {
           }
         }
       }
+      
       // Second level chart:
       & > ol {
         &::before {
@@ -138,6 +140,7 @@ ol {
           left: 0;
           width: 100%;
         }
+        // Second level chart:
         //& > li {
         //  & > div {
         //   background-color: #a13c40;
