--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -105,14 +105,23 @@
 <script>
   var pageTitle = 'Titel';
 </script>
-<script async defer src="https://bootstrap.secure.ku.dk/scripts/valid_search_engines_da.js"></script> {% if site.github %} <script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
+<script async defer src="https://bootstrap.secure.ku.dk/scripts/valid_search_engines_da.js"></script>
+{% if site.github %}
+<script src="{{ site.baseurl }}/dist/js/bootstrap.min.js"></script>
 <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-<script async defer src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script> {% else %} <script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script> {% endif %} {% if page.category == "kurser" %}
+<script async defer src="{{ site.baseurl }}/assets/js/ie10-viewport-bug-workaround.js"></script>
+{% else %}
+<script src="{{ site.baseurl }}/dist/js/bootstrap.js"></script>
+{% endif %}
+{% if page.category == "kurser" %}
 <!-- Kurser.ku.dk -->
-<script src="{{ site.baseurl }}/assets/js/kurser.ku.dk/kurser.min.js"></script> {% endif %} {% if page.slug != "examples" %}
+<script src="{{ site.baseurl }}/assets/js/kurser.ku.dk/kurser.min.js"></script>
+{% endif %}
+{% if page.slug != "examples" %}
 <!-- Documentation extra - not for production -->
 <script async defer src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
-<!-- //Documentation extra - not for production --> {% endif %}
+<!-- //Documentation extra - not for production -->
+{% endif %}
 <script async defer src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>
 <script>
   // Only use under development - set active left menu item
