--- a/docs/assets/css/content-elements/org-chart.less
+++ b/docs/assets/css/content-elements/org-chart.less
@@ -128,7 +128,7 @@ ol {
           }
         }
       }
-      
+
       // Second level chart:
       & > ol {
         &::before {
@@ -160,7 +160,7 @@ ol {
         //}
       }
     }
-    @media only screen and (min-width: @screen-sm) {
+    @media only screen and (min-width: @screen-md) {
       & > li {
         & > div {
           display: inline-block;
