--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -6,20 +6,20 @@
 *, *:before, *:after {
   color: #000 !important;
   text-shadow: none !important;
-  background: #fff !important;
   box-shadow: none !important;
 }
 
 html, body {
   display: block;
   overflow: visible !important;
+  background: #fff !important;
 }
 
 body {
   width: 210mm;
   height: 297mm;
   margin: 10mm auto;
-  font-size: 13px!important;
+  font-size: 13px !important;
 }
 
 header, nav, footer {
@@ -61,12 +61,16 @@ main, .main-area, .ku-branding {
 
 .main-content {
   margin-top: 23px;
-  width: 75%!important;
+  width: 75% !important;
+}
+
+.breadcrumbs {
+  margin-top: 0;
 }
 
 .right-side {
   float: left;
-  width: 25%!important;
+  width: 25% !important;
 }
 
 .panel-default>.panel-body {
@@ -154,6 +158,15 @@ h2, h3 {
   page-break-after: avoid;
 }
 
+/* Org chart */
+ol.org-chart li::after, ol.org-chart li::before, ol.org-chart li>div::after, ol.org-chart li>div::before, ol.org-chart ol::after, ol.org-chart ol::before {
+  background-color: #666;
+}
+
+ol.org-chart li>div {
+  border: 1px solid #666;
+}
+
 /*News lists */
 .item {
   page-break-inside: avoid;
@@ -236,7 +249,7 @@ tr.visible-sm {
 
 th.visible-sm, td.visible-sm {
   display: table-cell !important;
-} 
+}
 
 /* Grid: */
 /* .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
