--- a/docs/assets/css/content-elements/org-chart.less
+++ b/docs/assets/css/content-elements/org-chart.less
@@ -97,6 +97,15 @@ ol {
         min-height: 2em;
         padding: 0.5em;
       }
+
+      &:hover, li:hover + ol li {
+        background: #c8e4f8;
+
+        &::after,
+        &::before {
+          background-color: #c8e4f8;
+        }
+      }
     }
     // First level chart:
     & > li {
