--- a/docs/assets/css/content-elements/org-chart.less
+++ b/docs/assets/css/content-elements/org-chart.less
@@ -100,12 +100,12 @@ ol {
         &:hover {
           background-color: #c8e4f8;
 
-          ol {
+          &~ol {
             &::after,
             &::before {
               background-color: #c8e4f8;
             }
-            li {
+            &>li {
               &::after,
               &::before {
                 background-color: #c8e4f8;
